--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ gcp-and-terraform/04_variables_tf-gcp/terraform.tfvars
 azure-and-terraform/01-ResourceGroup/.terraform/
 
 azure-and-terraform/01-ResourceGroup/terraform.tfvars
+azure-and-terraform/01-ResourceGroup/terraform.tfstate
+azure-and-terraform/01-ResourceGroup/terraform.tfstate.*
