--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ azure-and-terraform/03-Subnets-Interpolation/.terraform
 azure-and-terraform/03-Subnets-Interpolation/terraform.tfvars
 azure-and-terraform/03-Subnets-Interpolation/terraform.tfstate
 azure-and-terraform/03-Subnets-Interpolation/terraform.tfstate.*
+
+azure-and-terraform/04-Using-locals-tf/.terraform
+azure-and-terraform/04-Using-locals-tf/terraform.tfvars
+azure-and-terraform/04-Using-locals-tf/terraform.tfstate
+azure-and-terraform/04-Using-locals-tf/terraform.tfstate.*
