--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ azure-and-terraform/05-Backend-Az-Storage/.terraform
 azure-and-terraform/05-Backend-Az-Storage/terraform.tfvars
 azure-and-terraform/05-Backend-Az-Storage/terraform.tfstate
 azure-and-terraform/05-Backend-Az-Storage/terraform.tfstate.*
+
+azure-and-terraform/05-Backend-Az-Storage/linux-vm/terraform.tfvars
+azure-and-terraform/05-Backend-Az-Storage/linux-vm/.terraform
+azure-and-terraform/05-Backend-Az-Storage/linux-vm/ssh-key/id_rsa
